objdir/test/spec/bad/TC5035_DisallowAnnotationItalic.vtt
WEBVTT

00:11.000 --> 00:15.000
We <i Annotation Here>are in New York City</i>